Fixed color contrast (dark green, lighter white)

--- a/styles/base.css
+++ b/styles/base.css
@@ -8,13 +8,13 @@
 
 body {
   height: 100vh;
-  background: #faf3dd;
+  background: #fffff5;
 }
 
 header {
   display: flex;
   background: #1f271b;
-  color: #faf3dd;
+  color: #fffff5;
   justify-content: center;
   align-items: center;
 }
@@ -33,7 +33,7 @@ h1 {
 }
 
 nav {
-  background: #55917f;
+  background: #447465;
   text-align: center;
 }
 
@@ -41,7 +41,7 @@ nav a {
   padding: 20px;
   display: block;
   font-size: 25px;
-  color: #faf3dd;
+  color: #fffff5;
   text-decoration: none;
 }
 
@@ -66,9 +66,9 @@ h2 {
 }
 
 h3 {
-  background: #55917f;
+  background: #447465;
   padding: 20px;
-  color: #faf3dd;
+  color: #fffff5;
   font-size: 25px;
   text-align: center;
 }
@@ -91,7 +91,7 @@ li a {
 footer {
   padding: 20px;
   background: #1f271b;
-  color: #faf3dd;
+  color: #fffff5;
   text-align: center;
   font-size: 20px;
 }
